--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.5.0
 annotated-types==0.7.0
 attrs==25.1.0
+beautifulsoup4==4.13.3
 blinker==1.9.0
 cachetools==5.5.1
 certifi==2025.1.31
@@ -11,7 +12,7 @@ gitdb==4.0.12
 GitPython==3.1.44
 google-ai-generativelanguage==0.6.15
 google-api-core==2.24.1
-google-api-python-client==2.160.0
+google-api-python-client==2.160.0   
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
 google-genai==1.2.0
@@ -24,11 +25,13 @@ idna==3.10
 Jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+lxml==5.3.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 narwhals==1.26.0
 numpy==2.2.2
+ofxparse==0.21
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
@@ -52,6 +55,7 @@ rpds-py==0.22.3
 rsa==4.9
 six==1.17.0
 smmap==5.0.2
+soupsieve==2.6
 streamlit==1.42.0
 tenacity==9.0.0
 toml==0.10.2
@@ -63,3 +67,4 @@ uritemplate==4.1.1
 urllib3==2.3.0
 watchdog==6.0.0
 websockets==14.2
+XlsxWriter==3.2.2
